[package]
name = "emergent"
version = "1.5.9"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2021"
description = "Toolset for producing emergent gameplay for games written in Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/emergent"
repository = "https://github.com/PsichiX/emergent"
documentation = "https://docs.rs/emergent"
readme = "README.md"
keywords = ["emergent", "ai", "gamedev"]
categories = ["simulation", "game-development"]
exclude = ["media/", "book/"]

[features]
scalar64 = []

[dependencies]
