[package]
name = "emergent"
version = "1.8.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2024"
description = "Toolset for producing emergent gameplay for games written in Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/emergent"
repository = "https://github.com/PsichiX/emergent"
documentation = "https://docs.rs/emergent"
readme = "../../README.md"
keywords = ["emergent", "ai", "gamedev"]
categories = ["simulation", "game-development"]

[features]
scalar64 = []
